[HOPSWORKS-2745] New API for managing machine learning models

--- a/notebooks/ml/Experiment/PyTorch/mnist.ipynb
+++ b/notebooks/ml/Experiment/PyTorch/mnist.ipynb
@@ -93,9 +93,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>26</td><td>application_1634202611091_0024</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1634202611091_0024/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_e06_1634202611091_0024_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
     "def wrapper():\n",
     "    import argparse\n",
@@ -110,6 +138,8 @@
     "    from hops import hdfs\n",
     "    import matplotlib.pyplot as plt\n",
     "    from matplotlib.ticker import MaxNLocator\n",
+    "    import hsml\n",
+    "    import uuid\n",
     "    \n",
     "    \n",
     "    train_acc = []\n",
@@ -206,13 +236,25 @@
     "    model = Net().to(device)\n",
     "    optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.5)\n",
     "\n",
-    "    #Single epoch\n",
+    "    # Train model\n",
     "    epochs = range(1,3)\n",
     "    for i in epochs:\n",
     "        train(model, device, train_loader, optimizer, writer)\n",
     "        test(model, device, test_loader)\n",
+    "        \n",
+    "        \n",
+    "    # Export model    \n",
+    "    conn = hsml.connection()\n",
+    "    mr = conn.get_model_registry()    \n",
+    "        \n",
+    "    export_path = os.getcwd() + '/model-' + str(uuid.uuid4())\n",
+    "    os.mkdir(export_path)\n",
     "\n",
-    "    torch.save(model.state_dict(), tensorboard.logdir() + \"mnist_cnn.pt\")\n",
+    "    torch.save(model.state_dict(), export_path + \"/mnist_cnn.pt\")\n",
+    "    \n",
+    "    torch_model = mr.torch.create_model(\"mnist_torch\", metrics={'train_acc': train_acc[-1], 'test_acc': test_acc[-1]})\n",
+    "    \n",
+    "    torch_model.save(export_path)\n",
     "\n",
     "    # Data\n",
     "    data = {'Epoch': epochs, 'Train': train_acc, 'Test': test_acc}\n",
@@ -233,19 +275,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished Experiment \n",
-      "\n",
-      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_deep_learning_admin000/Experiments/application_1598535004204_0011_3', {'accuracy': [0.9826], 'train_summary': 'Experiments/application_1598535004204_0011_3/train_summary.png', 'log': 'Experiments/application_1598535004204_0011_3/output.log'})"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from hops import experiment\n",
     "# Simple experiment, local_logdir=True to write to local FS and not HDFS (Look in Experiments dataset for contents after experiment)\n",
