--- a/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
+++ b/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
     "    import math\n",
     "    from hops import tensorboard\n",
     "\n",
-    "    from hops import model as hops_model\n",
+    "    import hsml\n",
     "    from hops import hdfs\n",
     "\n",
     "    batch_size=32\n",
@@ -206,14 +206,19 @@
     "    \n",
     "    metrics = {'accuracy': score[1]}\n",
     "    \n",
-    "    hops_model.export(export_path, \"mnist\", metrics=metrics)    \n",
+    "    conn = hsml.connection()\n",
+    "    mr = conn.get_model_registry()\n",
+    "    \n",
+    "    tf_model = mr.tensorflow.create_model(\"mnist_tf\", metrics=metrics)\n",
+    "    \n",
+    "    tf_model.save(export_path)\n",
     "    \n",
     "    return metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +227,7 @@
      "text": [
       "Finished Experiment \n",
       "\n",
-      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Experiments/application_1621614908761_0013_7', {'accuracy': 0.78125, 'log': 'Experiments/application_1621614908761_0013_7/output.log'})"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Experiments/application_1634202611091_0023_3', {'accuracy': 0.71875, 'log': 'Experiments/application_1634202611091_0023_3/output.log'})"
      ]
     }
    ],
