--- a/notebooks/ml/end_to_end_pipeline/tensorflow/end_to_end_tensorflow.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/tensorflow/end_to_end_tensorflow.ipynb
@@ -116,7 +116,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>8</td><td>application_1623669741824_0009</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1623669741824_0009/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1623669741824_0009_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>31</td><td>application_1634202611091_0029</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1634202611091_0029/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_e06_1634202611091_0029_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -155,7 +155,7 @@
     "    import math\n",
     "    from hops import tensorboard\n",
     "\n",
-    "    from hops import model as hops_model\n",
+    "    import hsml\n",
     "    from hops import hdfs\n",
     "\n",
     "    import pydoop.hdfs as pydoop\n",
@@ -244,7 +244,13 @@
     "    metrics = {'accuracy': score[1]}\n",
     "\n",
     "    # export trained model\n",
-    "    hops_model.export(export_path, \"mnist\", metrics=metrics)    \n",
+    "    \n",
+    "    conn = hsml.connection()\n",
+    "    mr = conn.get_model_registry()\n",
+    "    \n",
+    "    tf_model = mr.tensorflow.create_model(\"mnist_e2e\", metrics=metrics)\n",
+    "    \n",
+    "    tf_model.save(export_path)   \n",
     "    \n",
     "    return metrics"
    ]
@@ -260,7 +266,7 @@
      "text": [
       "Finished Experiment \n",
       "\n",
-      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Experiments/application_1623669741824_0009_1', {'accuracy': 0.75, 'log': 'Experiments/application_1623669741824_0009_1/output.log'})"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Experiments/application_1634202611091_0029_1', {'accuracy': 0.65625, 'log': 'Experiments/application_1634202611091_0029_1/output.log'})"
      ]
     }
    ],
@@ -268,7 +274,7 @@
     "from hops import experiment\n",
     "from hops import hdfs\n",
     "\n",
-    "experiment.launch(keras_mnist, name='mnist model', local_logdir=True, metric_key='accuracy')"
+    "experiment.launch(keras_mnist, name='mnist model for e2e example', local_logdir=True, metric_key='accuracy')"
    ]
   },
   {
@@ -305,9 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hops import model\n",
-    "from hops.model import Metric\n",
-    "MODEL_NAME=\"mnist\"\n",
+    "MODEL_NAME=\"mnist_e2e\"\n",
     "EVALUATION_METRIC=\"accuracy\""
    ]
   },
@@ -315,9 +319,20 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected. Call `.close()` to terminate connection gracefully."
+     ]
+    }
+   ],
    "source": [
-    "best_model = model.get_best_model(MODEL_NAME, EVALUATION_METRIC, Metric.MAX)"
+    "import hsml\n",
+    "conn = hsml.connection()\n",
+    "mr = conn.get_model_registry()\n",
+    "best_model = mr.get_best_model(MODEL_NAME, EVALUATION_METRIC, \"max\")"
    ]
   },
   {
@@ -329,16 +344,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model name: mnist\n",
+      "Model name: mnist_e2e\n",
       "Model version: 1\n",
-      "{'accuracy': '0.75'}"
+      "{'accuracy': '0.65625'}"
      ]
     }
    ],
    "source": [
-    "print('Model name: ' + best_model['name'])\n",
-    "print('Model version: ' + str(best_model['version']))\n",
-    "print(best_model['metrics'])"
+    "print('Model name: ' + best_model.name)\n",
+    "print('Model version: ' + str(best_model.version))\n",
+    "print(best_model.training_metrics)"
    ]
   },
   {
@@ -367,18 +382,18 @@
      "output_type": "stream",
      "text": [
       "Inferring model server from artifact files: TENSORFLOW_SERVING\n",
-      "Creating serving mnist for artifact /Projects/demo_ml_meb10000//Models/mnist ...\n",
+      "Creating serving mnist for artifact /Projects/demo_ml_meb10000//Models/mnist_e2e ...\n",
       "Serving mnist successfully created"
      ]
     }
    ],
    "source": [
     "# Create serving instance\n",
-    "SERVING_NAME = MODEL_NAME\n",
-    "MODEL_PATH = \"/Models/\" + best_model['name']\n",
+    "SERVING_NAME = \"mnist\"\n",
+    "MODEL_PATH = \"/Models/\" + best_model.name\n",
     "\n",
     "response = serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
-    "                                    MODEL_PATH, model_version=best_model['version'], # set the path and version of the model to be deployed\n",
+    "                                    MODEL_PATH, model_version=best_model.version, # set the path and version of the model to be deployed\n",
     "                                    kfserving=False, # whether to serve the model using KFServing or the default tool in the current Hopsworks version\n",
     "                                    topic_name=\"CREATE\", # topic name or CREATE to create a new topic for inference logging, otherwise NONE\n",
     "                                    inference_logging=\"ALL\", # ALL for default deployments. With KFServing, fine-grained inference logging is supported, e.g MODEL_INPUTS, PREDICTIONS or ALL\n",
@@ -479,7 +494,7 @@
     "import time\n",
     "while serving.get_status(SERVING_NAME) != \"Running\":\n",
     "    time.sleep(5) # Let the serving startup correctly\n",
-    "time.sleep(5)"
+    "time.sleep(10)"
    ]
   },
   {
@@ -508,16 +523,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': [[0.0553441085, 0.0616141, 0.067154482, 0.069141455, 0.246995106, 0.130969, 0.0395589024, 0.0969469175, 0.143460035, 0.0888158828]]}\n",
-      "{'predictions': [[0.0543416403, 0.0928857327, 0.0562490299, 0.0414868928, 0.200453416, 0.14457278, 0.0743329301, 0.0834233165, 0.181565985, 0.0706882328]]}\n",
-      "{'predictions': [[0.0681112781, 0.112750947, 0.053838972, 0.0369926021, 0.229402781, 0.0915899947, 0.0731116235, 0.121705107, 0.109502837, 0.102993853]]}\n",
-      "{'predictions': [[0.03977428, 0.0663804859, 0.0796358213, 0.033010494, 0.33583802, 0.0839255378, 0.064095892, 0.106100298, 0.0691347122, 0.122104362]]}\n",
-      "{'predictions': [[0.0444644019, 0.0800537, 0.0783681273, 0.0271258336, 0.235638157, 0.161611065, 0.0977479294, 0.0826667324, 0.0842844, 0.108039729]]}\n",
-      "{'predictions': [[0.0403586887, 0.0534307174, 0.0577742234, 0.0313412398, 0.289896399, 0.215779617, 0.0498447157, 0.0824261233, 0.0488549583, 0.130293325]]}\n",
-      "{'predictions': [[0.0387263857, 0.0371187031, 0.0298092011, 0.0163118, 0.505439878, 0.151147008, 0.0557191968, 0.0615878329, 0.0837082639, 0.0204317328]]}\n",
-      "{'predictions': [[0.0584824234, 0.0858849809, 0.0367949419, 0.0357485935, 0.257410109, 0.151323885, 0.0531631336, 0.0857358053, 0.14301616, 0.092440024]]}\n",
-      "{'predictions': [[0.0351415686, 0.0616544224, 0.0531332158, 0.0250257552, 0.339770794, 0.151065975, 0.0996603668, 0.0996671095, 0.0627569, 0.0721239]]}\n",
-      "{'predictions': [[0.0335562229, 0.0416831262, 0.0926761627, 0.0258403569, 0.421856701, 0.0878938437, 0.0590278842, 0.0880719721, 0.080725655, 0.0686680451]]}"
+      "{'predictions': [[0.0273139291, 0.111399874, 0.281308353, 0.0295493305, 0.0813421607, 0.00753608672, 0.192521051, 0.0744408295, 0.126423225, 0.0681650788]]}\n",
+      "{'predictions': [[0.046804741, 0.0864843428, 0.172663853, 0.0273131207, 0.0768367052, 0.0122773033, 0.24159646, 0.075423032, 0.183740854, 0.0768596]]}\n",
+      "{'predictions': [[0.018160874, 0.0885663927, 0.144589469, 0.0405702591, 0.125112206, 0.00655314745, 0.24432461, 0.112010017, 0.141238958, 0.0788740516]]}\n",
+      "{'predictions': [[0.0218341798, 0.0664624125, 0.275945, 0.0215178039, 0.0588449687, 0.00632566586, 0.341116309, 0.0699204206, 0.0884763151, 0.0495568551]]}\n",
+      "{'predictions': [[0.0240937341, 0.293608069, 0.179836228, 0.0253404714, 0.0902874246, 0.0143992659, 0.127755135, 0.0471641943, 0.0974252224, 0.100090183]]}\n",
+      "{'predictions': [[0.0268846527, 0.113879912, 0.146975368, 0.0446644798, 0.159491077, 0.0173089989, 0.225441456, 0.100019604, 0.0599906892, 0.105343819]]}\n",
+      "{'predictions': [[0.0287551265, 0.0808676, 0.235117212, 0.0310515836, 0.125808686, 0.015495427, 0.216872245, 0.0925265923, 0.0861695483, 0.087336]]}\n",
+      "{'predictions': [[0.0285533797, 0.18375437, 0.22159797, 0.0144990329, 0.197305664, 0.0149491709, 0.141593501, 0.0663809851, 0.0770437717, 0.0543221384]]}\n",
+      "{'predictions': [[0.0381118394, 0.128270537, 0.223592564, 0.0225842223, 0.0731007233, 0.00682865316, 0.186056048, 0.0436870158, 0.204710439, 0.0730580091]]}\n",
+      "{'predictions': [[0.0351260155, 0.16973035, 0.113904916, 0.0256955493, 0.0990088135, 0.0124071669, 0.281484812, 0.088683635, 0.118603751, 0.055355]]}"
      ]
     }
    ],
@@ -600,32 +615,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "serving: mnist, version: 1, timestamp: 1623763901771,\n",
-      "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0553441085, 0.0616141, 0.067154482, 0.069141455, 0.246995106, 0.130969, 0.0395589024, 0.0969469175, 0.143460035, 0.0888158828]\n",
+      "serving: mnist, version: 1, timestamp: 1634303666855,\n",
+      "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
+      "predictions: [0.0351260155, 0.16973035, 0.113904916, 0.0256955493, 0.0990088135, 0.0124071669, 0.281484812, 0.088683635, 0.118603751, 0.055355]\n",
       "\n",
-      "serving: mnist, version: 1, timestamp: 1623763902075,\n",
-      "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0543416403, 0.0928857327, 0.0562490299, 0.0414868928, 0.200453416, 0.14457278, 0.0743329301, 0.0834233165, 0.181565985, 0.0706882328]\n",
-      "\n",
-      "serving: mnist, version: 1, timestamp: 1623763902312,\n",
-      "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0681112781, 0.112750947, 0.053838972, 0.0369926021, 0.229402781, 0.0915899947, 0.0731116235, 0.121705107, 0.109502837, 0.102993853]\n",
-      "\n",
-      "serving: mnist, version: 1, timestamp: 1623763902554,\n",
-      "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.03977428, 0.0663804859, 0.0796358213, 0.033010494, 0.33583802, 0.0839255378, 0.064095892, 0.106100298, 0.0691347122, 0.122104362]\n",
-      "\n",
-      "serving: mnist, version: 1, timestamp: 1623763902821,\n",
-      "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0444644019, 0.0800537, 0.0783681273, 0.0271258336, 0.235638157, 0.161611065, 0.0977479294, 0.0826667324, 0.0842844, 0.108039729]"
+      "timeout.. no more messages to read from topic\n",
+      "timeout.. no more messages to read from topic\n",
+      "timeout.. no more messages to read from topic\n",
+      "timeout.. no more messages to read from topic"
      ]
     }
    ],
@@ -633,8 +637,8 @@
     "PRINT_INSTANCES=False\n",
     "PRINT_PREDICTIONS=True\n",
     "\n",
-    "for i in range(0, 5):\n",
-    "    msg = consumer.poll(timeout=1.0)\n",
+    "for i in range(0, 10):\n",
+    "    msg = consumer.poll(timeout=5.0)\n",
     "    if msg is not None:\n",
     "        value = msg.value()\n",
     "        try:\n",
