--- a/notebooks/ml/serving/docker_and_kubernetes/sklearn/model_serving_sklearn.ipynb
+++ b/notebooks/ml/serving/docker_and_kubernetes/sklearn/model_serving_sklearn.ipynb
@@ -129,25 +129,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Connected. Call `.close()` to terminate connection gracefully.\n",
       "Model name: irisflowerclassifier\n",
       "Model version: 1\n",
-      "{'accuracy': '0.98'}\n"
+      "{'accuracy': '0.9733333333333334'}\n"
      ]
     }
    ],
    "source": [
-    "from hops import model\n",
-    "from hops.model import Metric\n",
+    "import hsml\n",
+    "\n",
+    "conn = hsml.connection()\n",
+    "mr = conn.get_model_registry()\n",
     "\n",
     "MODEL_NAME = \"irisflowerclassifier\"\n",
     "EVALUATION_METRIC=\"accuracy\"\n",
     "IRIS_FLOWER_CLASSIFIER_SCRIPT = \"iris_flower_classifier.py\"\n",
     "\n",
-    "best_model = model.get_best_model(MODEL_NAME, EVALUATION_METRIC, Metric.MAX)\n",
+    "best_model = mr.get_best_model(MODEL_NAME, EVALUATION_METRIC, \"max\")\n",
     "\n",
-    "print('Model name: ' + best_model['name'])\n",
-    "print('Model version: ' + str(best_model['version']))\n",
-    "print(best_model['metrics'])"
+    "print('Model name: ' + best_model.name)\n",
+    "print('Model version: ' + str(best_model.version))\n",
+    "print(best_model.training_metrics)"
    ]
   },
   {
@@ -191,10 +194,10 @@
    "source": [
     "# Create serving\n",
     "SERVING_NAME = MODEL_NAME\n",
-    "SCRIPT_PATH = \"Models/\" + MODEL_NAME + \"/\" + str(best_model['version']) + \"/\" + IRIS_FLOWER_CLASSIFIER_SCRIPT\n",
+    "SCRIPT_PATH = best_model.path + \"/\" + IRIS_FLOWER_CLASSIFIER_SCRIPT\n",
     "\n",
     "serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
-    "                         SCRIPT_PATH, model_version=best_model['version'], # set the path and version of the model to be deployed\n",
+    "                         SCRIPT_PATH, model_version=best_model.version, # set the path and version of the model to be deployed\n",
     "                         topic_name=\"CREATE\", # topic name or CREATE to create a new topic for inference logging, otherwise NONE\n",
     "                         instances=1 # number of replicas\n",
     "                         )"
@@ -209,7 +212,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "irisflowerclassifier\n"
+      "irisflowerclassifier\n",
+      "mnist\n"
      ]
     }
    ],
@@ -243,7 +247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Info: \tid: 789,\n",
+      "Info: \tid: 1035,\n",
       "        model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py,\n",
       "        model_version: 1,\n",
       "        artifact_version: 0,\n",
@@ -284,7 +288,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id: 789, name: irisflowerclassifier, model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py, model_version: 1, artifact_version: 0, transformer: None, model_server: FLASK, serving_tool: DEFAULT, requested_instances: 1, available_instances: 0, available_transformer_instances: 0, predictor_resource_config: {'cores': 1, 'memory': 1024, 'gpus': 0}, creator: Admin Admin, created: 2021-07-07T09:44:24Z, status: Stopped, kafka_topic_dto: <hops.kafka.KafkaTopicDTO object at 0x7f5a10ff13d0>\n"
+      "id: 1035, name: irisflowerclassifier, model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py, model_version: 1, artifact_version: 0, transformer: None, model_server: FLASK, serving_tool: DEFAULT, requested_instances: 1, available_instances: 0, available_transformer_instances: None, predictor_resource_config: {'cores': 1, 'memory': 1024, 'gpus': 0}, creator: Admin Admin, created: 2021-10-15T14:21:33Z, status: Stopped, kafka_topic_dto: <hops.kafka.KafkaTopicDTO object at 0x7fc62b296fd0>\n"
      ]
     }
    ],
@@ -400,24 +404,24 @@
      "text": [
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
       "{'predictions': [1]}\n",
-      "{'predictions': [0]}\n",
       "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [0]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [1]}\n",
       "{'predictions': [2]}\n",
+      "{'predictions': [1]}\n",
+      "{'predictions': [0]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
-      "{'predictions': [1]}\n"
+      "{'predictions': [0]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [1]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n"
      ]
     }
    ],
@@ -502,32 +506,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "serving: irisflowerclassifier, version: 1, timestamp: 1625651538595,\n",
+      "timeout.. no more messages to read from topic\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1634307725172,\n",
       "        http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1625651538772,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1634307725249,\n",
       "        http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1625651538928,\n",
-      "        http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
-      "predictions: 2\n",
-      "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1625651539069,\n",
-      "        http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
-      "predictions: 2\n",
-      "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1625651539230,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1634307725377,\n",
       "        http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 1\n",
+      "\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1634307725483,\n",
+      "        http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
+      "predictions: 2\n",
       "\n"
      ]
     }
@@ -537,7 +538,7 @@
     "PRINT_PREDICTIONS=True\n",
     "\n",
     "for i in range(0, 5):\n",
-    "    msg = consumer.poll(timeout=1.0)\n",
+    "    msg = consumer.poll(timeout=5.0)\n",
     "    if msg is not None:\n",
     "        value = msg.value()\n",
     "        try:\n",
