--- a/notebooks/ml/serving/kfserving/tensorflow/model_serving_kfserving_with_transformer_tensorflow.ipynb
+++ b/notebooks/ml/serving/kfserving/tensorflow/model_serving_kfserving_with_transformer_tensorflow.ipynb
@@ -83,10 +83,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected. Call `.close()` to terminate connection gracefully.\n"
+     ]
+    }
+   ],
    "source": [
-    "from hops import model\n",
-    "from hops.model import Metric\n",
+    "import hsml\n",
+    "\n",
+    "conn = hsml.connection()\n",
+    "mr = conn.get_model_registry()\n",
+    "\n",
     "MODEL_NAME=\"mnist\"\n",
     "EVALUATION_METRIC=\"accuracy\""
    ]
@@ -97,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_model = model.get_best_model(MODEL_NAME, EVALUATION_METRIC, Metric.MAX)"
+    "best_model = mr.get_best_model(MODEL_NAME, EVALUATION_METRIC, \"max\")"
    ]
   },
   {
@@ -111,14 +122,14 @@
      "text": [
       "Model name: mnist\n",
       "Model version: 1\n",
-      "{'accuracy': '0.75'}\n"
+      "{'accuracy': '0.71875'}\n"
      ]
     }
    ],
    "source": [
-    "print('Model name: ' + best_model['name'])\n",
-    "print('Model version: ' + str(best_model['version']))\n",
-    "print(best_model['metrics'])"
+    "print('Model name: ' + best_model.name)\n",
+    "print('Model version: ' + str(best_model.version))\n",
+    "print(best_model.training_metrics)"
    ]
   },
   {
@@ -178,11 +189,11 @@
    "source": [
     "# Create serving instance\n",
     "SERVING_NAME = MODEL_NAME\n",
-    "MODEL_PATH=\"/Models/\" + best_model['name']\n",
+    "MODEL_PATH=\"/Models/\" + best_model.name\n",
     "TRANSFORMER_PATH=hdfs.project_path() + \"/Jupyter/serving/kfserving/tensorflow/transformer.py\" # or .ipynb\n",
     "\n",
     "response = serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
-    "                                    MODEL_PATH, model_version=best_model['version'], # set the path and version of the model to be deployed\n",
+    "                                    MODEL_PATH, model_version=best_model.version, # set the path and version of the model to be deployed\n",
     "                                    kfserving=True, # whether to serve the model using KFServing or the default tool in the current Hopsworks version\n",
     "                                    topic_name=\"CREATE\", # (optional) set the topic name or CREATE to create a new topic for inference logging\n",
     "                                    inference_logging=\"ALL\", # with KFServing, select the type of inference data to log into Kafka, e.g MODEL_INPUTS, PREDICTIONS or ALL\n",
@@ -267,14 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "while serving.get_status(SERVING_NAME) != \"Running\":\n",
     "    time.sleep(5) # Let the serving startup correctly\n",
-    "time.sleep(5)"
+    "time.sleep(10)"
    ]
   },
   {
@@ -300,23 +311,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': [[0.0613542125, 0.101323538, 0.0399091654, 0.0345890522, 0.302067667, 0.142577931, 0.0791310892, 0.0789082348, 0.0758777037, 0.0842615142]]}\n",
-      "{'predictions': [[0.0460102223, 0.0554421134, 0.0376880467, 0.0415558703, 0.214382008, 0.254266232, 0.062533088, 0.0978983194, 0.109497815, 0.0807262808]]}\n",
-      "{'predictions': [[0.0668974221, 0.0909847245, 0.0988900438, 0.0637232, 0.17731753, 0.122183181, 0.0818561539, 0.0969023556, 0.118541665, 0.0827036947]]}\n",
-      "{'predictions': [[0.0559709519, 0.0646299496, 0.0344434641, 0.0303664282, 0.306105494, 0.147630468, 0.0688919, 0.109457299, 0.0753086582, 0.107195415]]}\n",
-      "{'predictions': [[0.0380319357, 0.0628150403, 0.0754821, 0.026162535, 0.422493875, 0.0817232728, 0.0735279322, 0.0677653, 0.0746347308, 0.0773632899]]}\n",
-      "{'predictions': [[0.0665044934, 0.0668867528, 0.040783342, 0.0294370688, 0.338596195, 0.154240429, 0.0706104711, 0.0722219348, 0.107167564, 0.0535517447]]}\n",
-      "{'predictions': [[0.0825293362, 0.0559448414, 0.0419535786, 0.0181798562, 0.370016396, 0.154312477, 0.0558506288, 0.111585282, 0.0492350422, 0.0603924952]]}\n",
-      "{'predictions': [[0.0444687, 0.0443344265, 0.0746727288, 0.0247968901, 0.416514188, 0.0837049931, 0.102883548, 0.0640649423, 0.0908682868, 0.0536912456]]}\n",
-      "{'predictions': [[0.0763259754, 0.101309389, 0.0394318104, 0.0272058602, 0.320164829, 0.117243476, 0.0681534633, 0.0669988394, 0.11084564, 0.0723207369]]}\n",
-      "{'predictions': [[0.0394673645, 0.0884961, 0.0372174904, 0.0370060354, 0.335928798, 0.159753889, 0.087445952, 0.0784435645, 0.0646848083, 0.0715560839]]}\n"
+      "{'predictions': [[0.0137021886, 0.0677420273, 0.0292149764, 0.191990316, 0.127408266, 0.00461552059, 0.367597848, 0.113464594, 0.0338007659, 0.0504634716]]}\n",
+      "{'predictions': [[0.0189599581, 0.0472099446, 0.0424997695, 0.187853515, 0.150768891, 0.0110897673, 0.412878215, 0.0501961894, 0.0413965173, 0.0371471234]]}\n",
+      "{'predictions': [[0.0112110134, 0.0727639943, 0.0558238067, 0.135703281, 0.135276303, 0.00986007415, 0.41217351, 0.0851974338, 0.0288695, 0.0531211831]]}\n",
+      "{'predictions': [[0.0356102847, 0.0747722313, 0.0763402805, 0.135825962, 0.1375902, 0.0124450168, 0.373686343, 0.0581079796, 0.0473188423, 0.0483028106]]}\n",
+      "{'predictions': [[0.0185755845, 0.0853011534, 0.0644860417, 0.195167631, 0.154377118, 0.016472118, 0.288549781, 0.106394552, 0.0351197869, 0.035556335]]}\n",
+      "{'predictions': [[0.0233460106, 0.0540076382, 0.040135853, 0.195226252, 0.0804001316, 0.0169349462, 0.452840418, 0.0811912417, 0.0321122631, 0.0238052]]}\n",
+      "{'predictions': [[0.0114567261, 0.10346631, 0.0741356909, 0.206764832, 0.100969762, 0.0105429776, 0.33957383, 0.0910645, 0.039491456, 0.022533888]]}\n",
+      "{'predictions': [[0.0128288604, 0.0484299064, 0.0665263087, 0.144729093, 0.100146264, 0.0108449422, 0.471181333, 0.0990689173, 0.0180417895, 0.0282026958]]}\n",
+      "{'predictions': [[0.0161445029, 0.0610838085, 0.0999077857, 0.105673127, 0.140954942, 0.00983355, 0.444789171, 0.0534957275, 0.0368245468, 0.0312928334]]}\n",
+      "{'predictions': [[0.0139131062, 0.0619532727, 0.0521616861, 0.162161961, 0.118194342, 0.0180470552, 0.411713928, 0.0898847878, 0.032136444, 0.0398333706]]}\n"
      ]
     }
    ],
@@ -350,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,27 +417,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO -> servingId: 18, modelName: mnist, modelVersion: 1,requestTimestamp: 1623766542, inferenceId:741bdbc9-4846-469a-a2fc-2427e6a22679, messageType:response\n",
-      "Predictions -> [[0.0668974221, 0.0909847245, 0.0988900438, 0.0637232, 0.17731753, 0.122183181, 0.0818561539, 0.0969023556, 0.118541665, 0.0827036947]]\n",
+      "timeout.. no more messages to read from topic\n",
+      "INFO -> servingId: 2049, modelName: mnist, modelVersion: 1,requestTimestamp: 1634309496, inferenceId:baf90231-c76f-456b-a31d-4a1735dbb63e, messageType:response\n",
+      "Predictions -> [[0.0137021886, 0.0677420273, 0.0292149764, 0.191990316, 0.127408266, 0.00461552059, 0.367597848, 0.113464594, 0.0338007659, 0.0504634716]]\n",
       "\n",
-      "INFO -> servingId: 18, modelName: mnist, modelVersion: 1,requestTimestamp: 1623766542, inferenceId:c0fcae6d-1106-4922-aacc-5bc201d51393, messageType:response\n",
-      "Predictions -> [[0.0559709519, 0.0646299496, 0.0344434641, 0.0303664282, 0.306105494, 0.147630468, 0.0688919, 0.109457299, 0.0753086582, 0.107195415]]\n",
+      "INFO -> servingId: 2049, modelName: mnist, modelVersion: 1,requestTimestamp: 1634309497, inferenceId:912e660e-f8f9-4437-8e4e-296795a5d447, messageType:response\n",
+      "Predictions -> [[0.0189599581, 0.0472099446, 0.0424997695, 0.187853515, 0.150768891, 0.0110897673, 0.412878215, 0.0501961894, 0.0413965173, 0.0371471234]]\n",
       "\n",
-      "INFO -> servingId: 18, modelName: mnist, modelVersion: 1,requestTimestamp: 1623766543, inferenceId:78412c97-5b28-47eb-bc7f-4689f044a5fc, messageType:response\n",
-      "Predictions -> [[0.0380319357, 0.0628150403, 0.0754821, 0.026162535, 0.422493875, 0.0817232728, 0.0735279322, 0.0677653, 0.0746347308, 0.0773632899]]\n",
+      "INFO -> servingId: 2049, modelName: mnist, modelVersion: 1,requestTimestamp: 1634309497, inferenceId:b9ecfaa8-65b9-4b03-85c0-daa4a2887811, messageType:response\n",
+      "Predictions -> [[0.0112110134, 0.0727639943, 0.0558238067, 0.135703281, 0.135276303, 0.00986007415, 0.41217351, 0.0851974338, 0.0288695, 0.0531211831]]\n",
       "\n",
-      "INFO -> servingId: 18, modelName: mnist, modelVersion: 1,requestTimestamp: 1623766543, inferenceId:dbb0163a-bd86-4edb-a6c9-24e607d0b7ee, messageType:response\n",
-      "Predictions -> [[0.0665044934, 0.0668867528, 0.040783342, 0.0294370688, 0.338596195, 0.154240429, 0.0706104711, 0.0722219348, 0.107167564, 0.0535517447]]\n",
-      "\n",
-      "INFO -> servingId: 18, modelName: mnist, modelVersion: 1,requestTimestamp: 1623766543, inferenceId:8a586324-0b77-4d9c-9f1e-bb17a9cd4195, messageType:response\n",
-      "Predictions -> [[0.0825293362, 0.0559448414, 0.0419535786, 0.0181798562, 0.370016396, 0.154312477, 0.0558506288, 0.111585282, 0.0492350422, 0.0603924952]]\n",
+      "INFO -> servingId: 2049, modelName: mnist, modelVersion: 1,requestTimestamp: 1634309497, inferenceId:e0657b0f-c38d-490e-b60f-8f6054797609, messageType:response\n",
+      "Predictions -> [[0.0356102847, 0.0747722313, 0.0763402805, 0.135825962, 0.1375902, 0.0124450168, 0.373686343, 0.0581079796, 0.0473188423, 0.0483028106]]\n",
       "\n"
      ]
     }
@@ -436,7 +445,7 @@
     "PRINT_PREDICTIONS=True\n",
     "\n",
     "for i in range(0, 10):\n",
-    "    msg = consumer.poll(timeout=1)\n",
+    "    msg = consumer.poll(timeout=5.0)\n",
     "    if msg is not None:\n",
     "        value = msg.value()\n",
     "        try:\n",
