--- a/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
@@ -124,7 +124,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>2</td><td>application_1623896729676_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1623896729676_0003/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1623896729676_0003_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>33</td><td>application_1634202611091_0031</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1634202611091_0031/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_e06_1634202611091_0031_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -150,7 +150,7 @@
     "import numpy as np\n",
     "import time\n",
     "import json\n",
-    "from hops import kafka, hdfs, serving, model, tls\n",
+    "from hops import kafka, hdfs, serving, tls\n",
     "from confluent_kafka import Producer, Consumer, KafkaError\n",
     "import random"
    ]
@@ -319,15 +319,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f09bc740ad0>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "iris_features = fs.create_feature_group(name=\"iris_features\", version=1, time_travel_format=None)\n",
     "iris_features.save(iris_df3)"
@@ -337,15 +329,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7f09bc67b9d0>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "iris_labels_lookup = fs.create_feature_group(name=\"iris_labels_lookup\", version=1, time_travel_format=None)\n",
     "iris_labels_lookup.save(lookup_df)"
@@ -367,17 +351,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   sepal_length  sepal_width  petal_width  petal_length  label\n",
-      "0           5.1          3.5          0.2           1.4      0\n",
-      "1           4.9          3.0          0.2           1.4      0\n",
-      "2           4.7          3.2          0.2           1.3      0\n",
-      "3           4.6          3.1          0.2           1.5      0\n",
-      "4           5.0          3.6          0.2           1.4      0\n",
-      "5           5.4          3.9          0.4           1.7      0\n",
-      "6           4.6          3.4          0.3           1.4      0\n",
-      "7           5.0          3.4          0.2           1.5      0\n",
-      "8           4.4          2.9          0.2           1.4      0\n",
-      "9           4.9          3.1          0.1           1.5      0"
+      "   sepal_length  sepal_width  petal_length  petal_width  label\n",
+      "0           5.1          3.5           1.4          0.2      0\n",
+      "1           4.9          3.0           1.4          0.2      0\n",
+      "2           4.7          3.2           1.3          0.2      0\n",
+      "3           4.6          3.1           1.5          0.2      0\n",
+      "4           5.0          3.6           1.4          0.2      0\n",
+      "5           5.4          3.9           1.7          0.4      0\n",
+      "6           4.6          3.4           1.4          0.3      0\n",
+      "7           5.0          3.4           1.5          0.2      0\n",
+      "8           4.4          2.9           1.4          0.2      0\n",
+      "9           4.9          3.1           1.5          0.1      0"
      ]
     }
    ],
@@ -396,15 +380,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       sepal_length  sepal_width  petal_width  petal_length       label\n",
-      "count    150.000000   150.000000   150.000000    150.000000  150.000000\n",
-      "mean       5.843333     3.057333     1.199333      3.758000    1.000000\n",
-      "std        0.828066     0.435866     0.762238      1.765298    0.819232\n",
-      "min        4.300000     2.000000     0.100000      1.000000    0.000000\n",
-      "25%        5.100000     2.800000     0.300000      1.600000    0.000000\n",
-      "50%        5.800000     3.000000     1.300000      4.350000    1.000000\n",
-      "75%        6.400000     3.300000     1.800000      5.100000    2.000000\n",
-      "max        7.900000     4.400000     2.500000      6.900000    2.000000"
+      "       sepal_length  sepal_width  petal_length  petal_width       label\n",
+      "count    150.000000   150.000000    150.000000   150.000000  150.000000\n",
+      "mean       5.843333     3.057333      3.758000     1.199333    1.000000\n",
+      "std        0.828066     0.435866      1.765298     0.762238    0.819232\n",
+      "min        4.300000     2.000000      1.000000     0.100000    0.000000\n",
+      "25%        5.100000     2.800000      1.600000     0.300000    0.000000\n",
+      "50%        5.800000     3.000000      4.350000     1.300000    1.000000\n",
+      "75%        6.400000     3.300000      5.100000     1.800000    2.000000\n",
+      "max        7.900000     4.400000      6.900000     2.500000    2.000000"
      ]
     }
    ],
@@ -457,7 +441,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.98"
+      "0.9733333333333334"
      ]
     }
    ],
@@ -533,17 +517,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exported model irisflowerclassifier as version 1 successfully.\n",
+      "Connected. Call `.close()` to terminate connection gracefully.\n",
+      "Exporting model irisflowerclassifier with version 1\n",
+      "{\"id\": \"irisflowerclassifier_1\", \"experimentId\": null, \"projectName\": \"demo_ml_meb10000\", \"experimentProjectName\": \"demo_ml_meb10000\", \"name\": \"irisflowerclassifier\", \"signature\": null, \"version\": 1, \"description\": \"A collection of models for irisflowerclassifier\", \"inputExample\": null, \"framework\": \"SKLEARN\", \"metrics\": {\"accuracy\": 0.9733333333333334}, \"trainingDataset\": null, \"environment\": null, \"program\": null}\n",
       "Polling irisflowerclassifier version 1 for model availability.\n",
-      "get model:/hopsworks-api/api/project/120/models/irisflowerclassifier_1?filter_by=endpoint_id:120\n",
-      "Model now available."
+      "Model is now registered.\n",
+      "<hsml.sklearn.model.Model object at 0x7f1164a561d0>"
      ]
     }
    ],
    "source": [
     "MODEL_NAME = \"irisflowerclassifier\"\n",
     "\n",
-    "model.export(IRIS_FLOWER_RESOURCES_PATH, MODEL_NAME, metrics={'accuracy': acc})"
+    "import hsml\n",
+    "\n",
+    "conn = hsml.connection()\n",
+    "mr = conn.get_model_registry()\n",
+    "\n",
+    "tf_model = mr.sklearn.create_model(MODEL_NAME, metrics={'accuracy': acc})\n",
+    "\n",
+    "tf_model.save(IRIS_FLOWER_RESOURCES_PATH)"
    ]
   },
   {
@@ -557,7 +550,6 @@
      "text": [
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1\n",
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py\n",
-      "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_knn.pkl\n",
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_knn.pkl\n",
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/program.ipynb"
      ]
@@ -637,19 +629,18 @@
      "text": [
       "Model name: irisflowerclassifier\n",
       "Model version: 1\n",
-      "{'accuracy': '0.98'}"
+      "{'accuracy': '0.9733333333333334'}"
      ]
     }
    ],
    "source": [
-    "from hops.model import Metric\n",
     "EVALUATION_METRIC=\"accuracy\"\n",
     "\n",
-    "best_model = model.get_best_model(MODEL_NAME, EVALUATION_METRIC, Metric.MAX)\n",
+    "best_model = mr.get_best_model(MODEL_NAME, EVALUATION_METRIC, \"max\")\n",
     "\n",
-    "print('Model name: ' + best_model['name'])\n",
-    "print('Model version: ' + str(best_model['version']))\n",
-    "print(best_model['metrics'])"
+    "print('Model name: ' + best_model.name)\n",
+    "print('Model version: ' + str(best_model.version))\n",
+    "print(best_model.training_metrics)"
    ]
   },
   {
@@ -677,10 +668,10 @@
    "source": [
     "# Create serving\n",
     "SERVING_NAME = MODEL_NAME\n",
-    "SCRIPT_PATH = \"Models/\" + MODEL_NAME + \"/\" + str(best_model['version']) + \"/\" + IRIS_FLOWER_CLASSIFIER_SCRIPT\n",
+    "SCRIPT_PATH = best_model.path + \"/\" + IRIS_FLOWER_CLASSIFIER_SCRIPT\n",
     "\n",
     "serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
-    "                         SCRIPT_PATH, model_version=best_model['version'], # set the path and version of the model to be deployed\n",
+    "                         SCRIPT_PATH, model_version=best_model.version, # set the path and version of the model to be deployed\n",
     "                         topic_name=\"CREATE\", # topic name or CREATE to create a new topic for inference logging, otherwise NONE\n",
     "                         instances=1 # number of replicas\n",
     "                         )"
@@ -729,7 +720,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Info: \tid: 788,\n",
+      "Info: \tid: 1032,\n",
       "        model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py,\n",
       "        model_version: 1,\n",
       "        artifact_version: 0,\n",
@@ -770,7 +761,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id: 788, name: irisflowerclassifier, model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py, model_version: 1, artifact_version: 0, transformer: None, model_server: FLASK, serving_tool: DEFAULT, requested_instances: 1, available_instances: 0, available_transformer_instances: 0, predictor_resource_config: {'cores': 1, 'memory': 1024, 'gpus': 0}, creator: Admin Admin, created: 2021-07-07T09:38:40Z, status: Stopped, kafka_topic_dto: <hops.kafka.KafkaTopicDTO object at 0x7f09bc740710>"
+      "id: 1032, name: irisflowerclassifier, model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py, model_version: 1, artifact_version: 0, transformer: None, model_server: FLASK, serving_tool: DEFAULT, requested_instances: 1, available_instances: 0, available_transformer_instances: None, predictor_resource_config: {'cores': 1, 'memory': 1024, 'gpus': 0}, creator: Admin Admin, created: 2021-10-15T14:03:50Z, status: Stopped, kafka_topic_dto: <hops.kafka.KafkaTopicDTO object at 0x7f1165197ed0>"
      ]
     }
    ],
@@ -869,24 +860,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': [1]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [1]}\n",
-      "{'predictions': [1]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
@@ -894,6 +874,17 @@
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
       "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [1]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [1]}\n",
+      "{'predictions': [0]}\n",
       "{'predictions': [1]}\n",
       "{'predictions': [2]}"
      ]
@@ -928,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,30 +975,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "serving: irisflowerclassifier, version: 1, timestamp: 1625650784109,\n",
-      "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
-      "predictions: 1, prediction_label:Versicolor\n",
-      "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1625650784277,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1634306666891,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1625650784416,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1634306666970,\n",
+      "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
+      "predictions: 2, prediction_label:Virginica\n",
+      "\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1634306667091,\n",
+      "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
+      "predictions: 2, prediction_label:Virginica\n",
+      "\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1634306667315,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 1, prediction_label:Versicolor\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1625650784596,\n",
-      "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
-      "predictions: 1, prediction_label:Versicolor\n",
-      "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1625650784732,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1634306667413,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica"
      ]
@@ -1018,7 +1009,7 @@
     "PRINT_PREDICTIONS=True\n",
     "\n",
     "for i in range(0, 5):\n",
-    "    msg = consumer.poll(timeout=1.0)\n",
+    "    msg = consumer.poll(timeout=5.0)\n",
     "    if msg is not None:\n",
     "        value = msg.value()\n",
     "        try:\n",
