--- a/notebooks/ml/serving/docker_and_kubernetes/tensorflow/model_serving_tensorflow.ipynb
+++ b/notebooks/ml/serving/docker_and_kubernetes/tensorflow/model_serving_tensorflow.ipynb
@@ -77,8 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hops import model\n",
-    "from hops.model import Metric\n",
+    "import hsml\n",
     "MODEL_NAME=\"mnist\"\n",
     "EVALUATION_METRIC=\"accuracy\""
    ]
@@ -87,9 +86,20 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected. Call `.close()` to terminate connection gracefully.\n"
+     ]
+    }
+   ],
    "source": [
-    "best_model = model.get_best_model(MODEL_NAME, EVALUATION_METRIC, Metric.MAX)"
+    "conn = hsml.connection()\n",
+    "mr = conn.get_model_registry()\n",
+    "\n",
+    "best_model = mr.get_best_model(MODEL_NAME, EVALUATION_METRIC, \"max\")"
    ]
   },
   {
@@ -103,14 +113,14 @@
      "text": [
       "Model name: mnist\n",
       "Model version: 1\n",
-      "{'accuracy': '0.75'}\n"
+      "{'accuracy': '0.71875'}\n"
      ]
     }
    ],
    "source": [
-    "print('Model name: ' + best_model['name'])\n",
-    "print('Model version: ' + str(best_model['version']))\n",
-    "print(best_model['metrics'])"
+    "print('Model name: ' + best_model.name)\n",
+    "print('Model version: ' + str(best_model.version))\n",
+    "print(best_model.training_metrics)"
    ]
   },
   {
@@ -147,10 +157,10 @@
    "source": [
     "# Create serving instance\n",
     "SERVING_NAME = MODEL_NAME\n",
-    "MODEL_PATH=\"/Models/\" + best_model['name']\n",
+    "MODEL_PATH=\"/Models/\" + best_model.name\n",
     "\n",
     "response = serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
-    "                                    MODEL_PATH, model_version=best_model['version'], # set the path and version of the model to be deployed\n",
+    "                                    MODEL_PATH, model_version=best_model.version, # set the path and version of the model to be deployed\n",
     "                                    kfserving=False, # the model will be served either with Docker or Kubernetes depending on the Hopsworks version\n",
     "                                    topic_name=\"CREATE\", # (optional) set the topic name or CREATE to create a new topic for inference logging\n",
     "                                    instances=1, # with KFServing, set 0 instances to leverage scale-to-zero capabilities\n",
@@ -239,7 +249,7 @@
     "import time\n",
     "while serving.get_status(SERVING_NAME) != \"Running\":\n",
     "    time.sleep(5) # Let the serving startup correctly\n",
-    "time.sleep(5)"
+    "time.sleep(10)"
    ]
   },
   {
@@ -272,26 +282,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': [[0.0570081174, 0.0655516908, 0.0384815671, 0.0236714445, 0.326048434, 0.208096072, 0.0829753354, 0.081687, 0.0640862733, 0.0523940176]]}\n",
-      "{'predictions': [[0.0410101265, 0.0716211, 0.0464931, 0.0277518351, 0.239403486, 0.129260719, 0.0967375934, 0.106829077, 0.165632, 0.075260967]]}\n",
-      "{'predictions': [[0.0452777408, 0.0637608, 0.0491008312, 0.0400233492, 0.346460611, 0.0908036157, 0.0619194657, 0.0982931, 0.114815064, 0.0895455331]]}\n",
-      "{'predictions': [[0.0314507075, 0.0585816801, 0.0445142835, 0.0438556336, 0.273136318, 0.215605736, 0.0794836283, 0.130447, 0.0517816357, 0.0711433962]]}\n",
-      "{'predictions': [[0.0698710307, 0.0869943276, 0.0301038921, 0.0247928668, 0.286450505, 0.167296484, 0.094396539, 0.0698259771, 0.11602433, 0.0542440601]]}\n",
-      "{'predictions': [[0.0860077, 0.0403077304, 0.0244597942, 0.0264858678, 0.27012223, 0.163445517, 0.0495519452, 0.056668926, 0.170305803, 0.112644464]]}\n",
-      "{'predictions': [[0.0458639339, 0.0367544517, 0.0322426595, 0.0237141084, 0.434011459, 0.172226384, 0.0522794165, 0.0790228918, 0.0574153252, 0.0664693117]]}\n",
-      "{'predictions': [[0.0509353839, 0.0694219097, 0.0321636237, 0.0302796885, 0.377082, 0.0967385247, 0.0627277941, 0.0596957766, 0.129347622, 0.0916076154]]}\n",
-      "{'predictions': [[0.0929256454, 0.084371306, 0.0401998349, 0.0336654373, 0.23777315, 0.168973163, 0.0494310856, 0.10867174, 0.0850041956, 0.0989845097]]}\n",
-      "{'predictions': [[0.102271199, 0.0851190835, 0.0694739893, 0.0348733179, 0.261094034, 0.118886627, 0.0565741286, 0.0851207152, 0.0804453865, 0.106141426]]}\n",
-      "{'predictions': [[0.0288008358, 0.0665152222, 0.0653517917, 0.0326284356, 0.26474762, 0.172006473, 0.0978971422, 0.0685486645, 0.0634336, 0.14007026]]}\n",
-      "{'predictions': [[0.0499485396, 0.0927426, 0.0480168052, 0.0398117565, 0.300983, 0.18416892, 0.0596857667, 0.0824098736, 0.0793504193, 0.0628822893]]}\n",
-      "{'predictions': [[0.0330961198, 0.038298443, 0.0398440063, 0.0286740121, 0.463378936, 0.182802454, 0.0649509579, 0.0510277376, 0.0580670796, 0.0398602225]]}\n",
-      "{'predictions': [[0.0428033546, 0.0566293746, 0.0597526729, 0.027359141, 0.361109078, 0.130646974, 0.0565278865, 0.0533226, 0.139279976, 0.0725689903]]}\n",
-      "{'predictions': [[0.0815023333, 0.0703946352, 0.0303218532, 0.0270094294, 0.399567336, 0.0814294592, 0.0649439767, 0.0777247623, 0.0781110227, 0.0889950916]]}\n",
-      "{'predictions': [[0.0542477667, 0.0503175519, 0.0552789271, 0.033593718, 0.34673205, 0.120051116, 0.084772341, 0.10054718, 0.0648765489, 0.0895828158]]}\n",
-      "{'predictions': [[0.0621216558, 0.0424978137, 0.0395628363, 0.0377483591, 0.28446573, 0.200037196, 0.0966890827, 0.0949611291, 0.069457829, 0.0724583194]]}\n",
-      "{'predictions': [[0.0257849973, 0.0820573047, 0.0741208941, 0.0209595, 0.270556331, 0.115839921, 0.0773180723, 0.133814871, 0.0846348703, 0.114913322]]}\n",
-      "{'predictions': [[0.0392508022, 0.0422034599, 0.0526005216, 0.0182473138, 0.429069, 0.172948882, 0.0755125433, 0.0646678358, 0.0515763573, 0.0539232716]]}\n",
-      "{'predictions': [[0.0543204099, 0.0507360362, 0.0692701191, 0.0304225981, 0.417896062, 0.114129879, 0.0645712093, 0.0764147639, 0.0615315959, 0.0607073642]]}\n"
+      "{'predictions': [[0.0171465632, 0.048792474, 0.0487240963, 0.125329539, 0.154285505, 0.0121596335, 0.405637234, 0.116209693, 0.0209982134, 0.0507171303]]}\n",
+      "{'predictions': [[0.00984500162, 0.0813344792, 0.0794480368, 0.229178905, 0.146066204, 0.0101964734, 0.356174409, 0.037145935, 0.0207445342, 0.0298659969]]}\n",
+      "{'predictions': [[0.0314147845, 0.0672961771, 0.0496617593, 0.137096703, 0.171351343, 0.00814313535, 0.397425473, 0.0644465834, 0.0328251459, 0.0403388739]]}\n",
+      "{'predictions': [[0.0181549136, 0.038787093, 0.0792503878, 0.264465064, 0.136571646, 0.00646544108, 0.297726512, 0.0910884291, 0.0375934504, 0.0298969876]]}\n",
+      "{'predictions': [[0.0168738756, 0.0996855795, 0.0380544215, 0.117498912, 0.1118147, 0.0165658947, 0.379053235, 0.102008328, 0.0545530841, 0.0638920367]]}\n",
+      "{'predictions': [[0.0176697783, 0.0455756187, 0.0470717624, 0.0988537148, 0.0915572941, 0.0109392768, 0.496714264, 0.101835445, 0.0549756736, 0.0348071]]}\n",
+      "{'predictions': [[0.0205914453, 0.0654138848, 0.0507608578, 0.109451666, 0.14756158, 0.00987146609, 0.431472629, 0.090302147, 0.0381189436, 0.0364553928]]}\n",
+      "{'predictions': [[0.0319844857, 0.0610748753, 0.0706905946, 0.14923127, 0.150066555, 0.011391649, 0.384640843, 0.0522877201, 0.065342471, 0.0232895259]]}\n",
+      "{'predictions': [[0.019955175, 0.0508767068, 0.102297261, 0.0950483, 0.26953721, 0.0109694609, 0.299288541, 0.05249957, 0.0426387936, 0.056888964]]}\n",
+      "{'predictions': [[0.0268841349, 0.0481890179, 0.0405104123, 0.223767355, 0.0753803477, 0.012642215, 0.435542524, 0.0377673581, 0.0656719, 0.0336447731]]}\n",
+      "{'predictions': [[0.0316545069, 0.0524385, 0.0268935878, 0.14233245, 0.0910583362, 0.010664613, 0.481864959, 0.0971154124, 0.0333014913, 0.0326760858]]}\n",
+      "{'predictions': [[0.0146529395, 0.0730243102, 0.0754668266, 0.0760785118, 0.158810198, 0.00608280115, 0.481211245, 0.0451714061, 0.0347146802, 0.0347870588]]}\n",
+      "{'predictions': [[0.0298648961, 0.0861661658, 0.0382564589, 0.114841245, 0.122694105, 0.0161959752, 0.422252536, 0.0983899385, 0.0416136682, 0.029725058]]}\n",
+      "{'predictions': [[0.0280318856, 0.0634325817, 0.0437133424, 0.17799063, 0.286054105, 0.0121226059, 0.221906558, 0.0796185061, 0.0358458944, 0.0512838848]]}\n",
+      "{'predictions': [[0.035763368, 0.0686579943, 0.106324136, 0.192474946, 0.259408325, 0.00920116, 0.226656079, 0.0474149771, 0.0272313487, 0.0268676374]]}\n",
+      "{'predictions': [[0.0138048641, 0.0592474192, 0.0382033624, 0.154716209, 0.165679768, 0.0121336132, 0.366904467, 0.0977301672, 0.0177424084, 0.0738376752]]}\n",
+      "{'predictions': [[0.0275360607, 0.0372710526, 0.0691219494, 0.151717484, 0.195877165, 0.0133077614, 0.28821364, 0.125464097, 0.0411424451, 0.0503483824]]}\n",
+      "{'predictions': [[0.0236973837, 0.0719966814, 0.0619147, 0.18794328, 0.185334459, 0.0170248579, 0.305889249, 0.0743705, 0.0384167694, 0.033412084]]}\n",
+      "{'predictions': [[0.0275418516, 0.0509299189, 0.0435518362, 0.206807852, 0.144844249, 0.0171949361, 0.304691344, 0.0956295207, 0.0572692901, 0.0515392]]}\n",
+      "{'predictions': [[0.0305586215, 0.0941101536, 0.0405069329, 0.167417407, 0.0907427, 0.0269653387, 0.356301039, 0.104508244, 0.0603947118, 0.0284948815]]}\n"
      ]
     }
    ],
@@ -374,32 +384,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "serving: mnist, version: 1, timestamp: 1623765611867,\n",
+      "timeout.. no more messages to read from topic\n",
+      "serving: mnist, version: 1, timestamp: 1634307452661,\n",
       "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0570081174, 0.0655516908, 0.0384815671, 0.0236714445, 0.326048434, 0.208096072, 0.0829753354, 0.081687, 0.0640862733, 0.0523940176]\n",
+      "predictions: [0.0171465632, 0.048792474, 0.0487240963, 0.125329539, 0.154285505, 0.0121596335, 0.405637234, 0.116209693, 0.0209982134, 0.0507171303]\n",
       "\n",
-      "serving: mnist, version: 1, timestamp: 1623765612038,\n",
+      "serving: mnist, version: 1, timestamp: 1634307452775,\n",
       "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0410101265, 0.0716211, 0.0464931, 0.0277518351, 0.239403486, 0.129260719, 0.0967375934, 0.106829077, 0.165632, 0.075260967]\n",
+      "predictions: [0.00984500162, 0.0813344792, 0.0794480368, 0.229178905, 0.146066204, 0.0101964734, 0.356174409, 0.037145935, 0.0207445342, 0.0298659969]\n",
       "\n",
-      "serving: mnist, version: 1, timestamp: 1623765612232,\n",
+      "serving: mnist, version: 1, timestamp: 1634307452864,\n",
       "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0452777408, 0.0637608, 0.0491008312, 0.0400233492, 0.346460611, 0.0908036157, 0.0619194657, 0.0982931, 0.114815064, 0.0895455331]\n",
+      "predictions: [0.0314147845, 0.0672961771, 0.0496617593, 0.137096703, 0.171351343, 0.00814313535, 0.397425473, 0.0644465834, 0.0328251459, 0.0403388739]\n",
       "\n",
-      "serving: mnist, version: 1, timestamp: 1623765612459,\n",
+      "serving: mnist, version: 1, timestamp: 1634307452968,\n",
       "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0314507075, 0.0585816801, 0.0445142835, 0.0438556336, 0.273136318, 0.215605736, 0.0794836283, 0.130447, 0.0517816357, 0.0711433962]\n",
-      "\n",
-      "serving: mnist, version: 1, timestamp: 1623765612678,\n",
-      "        http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0698710307, 0.0869943276, 0.0301038921, 0.0247928668, 0.286450505, 0.167296484, 0.094396539, 0.0698259771, 0.11602433, 0.0542440601]\n",
+      "predictions: [0.0181549136, 0.038787093, 0.0792503878, 0.264465064, 0.136571646, 0.00646544108, 0.297726512, 0.0910884291, 0.0375934504, 0.0298969876]\n",
       "\n"
      ]
     }
@@ -409,7 +416,7 @@
     "PRINT_PREDICTIONS=True\n",
     "\n",
     "for i in range(0, 5):\n",
-    "    msg = consumer.poll(timeout=1.0)\n",
+    "    msg = consumer.poll(timeout=5.0)\n",
     "    if msg is not None:\n",
     "        value = msg.value()\n",
     "        try:\n",
