--- a/notebooks/ml/serving/kfserving/tensorflow/model_serving_kfserving_tensorflow.ipynb
+++ b/notebooks/ml/serving/kfserving/tensorflow/model_serving_kfserving_tensorflow.ipynb
@@ -77,10 +77,21 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected. Call `.close()` to terminate connection gracefully.\n"
+     ]
+    }
+   ],
    "source": [
-    "from hops import model\n",
-    "from hops.model import Metric\n",
+    "import hsml\n",
+    "\n",
+    "conn = hsml.connection()\n",
+    "mr = conn.get_model_registry()\n",
+    "\n",
     "MODEL_NAME=\"mnist\"\n",
     "EVALUATION_METRIC=\"accuracy\""
    ]
@@ -91,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_model = model.get_best_model(MODEL_NAME, EVALUATION_METRIC, Metric.MAX)"
+    "best_model = mr.get_best_model(MODEL_NAME, EVALUATION_METRIC, \"max\")"
    ]
   },
   {
@@ -105,14 +116,14 @@
      "text": [
       "Model name: mnist\n",
       "Model version: 1\n",
-      "{'accuracy': '0.75'}\n"
+      "{'accuracy': '0.71875'}\n"
      ]
     }
    ],
    "source": [
-    "print('Model name: ' + best_model['name'])\n",
-    "print('Model version: ' + str(best_model['version']))\n",
-    "print(best_model['metrics'])"
+    "print('Model name: ' + best_model.name)\n",
+    "print('Model version: ' + str(best_model.version))\n",
+    "print(best_model.training_metrics)"
    ]
   },
   {
@@ -149,10 +160,10 @@
    "source": [
     "# Create serving instance\n",
     "SERVING_NAME = MODEL_NAME\n",
-    "MODEL_PATH=\"/Models/\" + best_model['name']\n",
+    "MODEL_PATH=\"/Models/\" + best_model.name\n",
     "\n",
     "response = serving.create_or_update(SERVING_NAME, # define a name for the serving instance\n",
-    "                                    MODEL_PATH, model_version=best_model['version'], # set the path and version of the model to be deployed\n",
+    "                                    MODEL_PATH, model_version=best_model.version, # set the path and version of the model to be deployed\n",
     "                                    kfserving=True, # whether to serve the model using KFServing or the default tool in the current Hopsworks version\n",
     "                                    topic_name=\"CREATE\", # (optional) set the topic name or CREATE to create a new topic for inference logging\n",
     "                                    inference_logging=\"ALL\", # with KFServing, select the type of inference data to log into Kafka, e.g MODEL_INPUTS, PREDICTIONS or ALL\n",
@@ -242,7 +253,7 @@
     "import time\n",
     "while serving.get_status(SERVING_NAME) != \"Running\":\n",
     "    time.sleep(5) # Let the serving startup correctly\n",
-    "time.sleep(5)"
+    "time.sleep(10)"
    ]
   },
   {
@@ -275,16 +286,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': [[0.0397434309, 0.0627049282, 0.0516082384, 0.0257312227, 0.360617578, 0.12559171, 0.102420703, 0.0631940439, 0.123033032, 0.0453550518]]}\n",
-      "{'predictions': [[0.0603190921, 0.0537713878, 0.0616007112, 0.0458610356, 0.321380526, 0.200304031, 0.0421636887, 0.0574198663, 0.0928280652, 0.0643516]]}\n",
-      "{'predictions': [[0.0548233502, 0.047754433, 0.0511284024, 0.0422567539, 0.324842304, 0.185612082, 0.060034167, 0.068407923, 0.103621393, 0.0615192093]]}\n",
-      "{'predictions': [[0.0422211885, 0.0751092881, 0.0469165482, 0.038731005, 0.385032415, 0.176647171, 0.0407903641, 0.0397685617, 0.0769609958, 0.0778225]]}\n",
-      "{'predictions': [[0.0613800436, 0.0483597815, 0.073576726, 0.0258731693, 0.3094998, 0.094138369, 0.0458293408, 0.088566117, 0.107787244, 0.144989386]]}\n",
-      "{'predictions': [[0.072254248, 0.0885431543, 0.0433586352, 0.0398325, 0.265434831, 0.181497604, 0.0689154416, 0.0554167852, 0.0857768059, 0.0989700779]]}\n",
-      "{'predictions': [[0.0763806552, 0.0438941717, 0.0335087031, 0.0202852022, 0.34188053, 0.127577499, 0.103079036, 0.0814603046, 0.116382934, 0.055550985]]}\n",
-      "{'predictions': [[0.0522790626, 0.104057834, 0.0571820699, 0.0429950953, 0.254568487, 0.137584299, 0.0513742864, 0.0879343525, 0.0830356777, 0.128988877]]}\n",
-      "{'predictions': [[0.0439827815, 0.0486454293, 0.0546759665, 0.0406821, 0.296878666, 0.22346729, 0.0523542352, 0.100808315, 0.0766454265, 0.0618598461]]}\n",
-      "{'predictions': [[0.0300273038, 0.0879570097, 0.0512411222, 0.0531735569, 0.256210625, 0.16444467, 0.0763468072, 0.0823352486, 0.0803362, 0.117927447]]}\n"
+      "{'predictions': [[0.0218618922, 0.060441982, 0.0637693629, 0.0953115523, 0.268337429, 0.011644518, 0.320831656, 0.0623592362, 0.0468038693, 0.048638504]]}\n",
+      "{'predictions': [[0.0128081683, 0.058361087, 0.0519089513, 0.0680933073, 0.101529188, 0.00917466916, 0.49870196, 0.124165297, 0.0234098844, 0.0518474728]]}\n",
+      "{'predictions': [[0.0169027131, 0.0688994601, 0.0502710305, 0.127270445, 0.0928574502, 0.010248892, 0.482126236, 0.0942078382, 0.0259690043, 0.0312469937]]}\n",
+      "{'predictions': [[0.0257082824, 0.040854983, 0.0316030905, 0.203676596, 0.138357729, 0.00987543911, 0.397324562, 0.064534761, 0.0407368727, 0.0473276041]]}\n",
+      "{'predictions': [[0.0209536515, 0.075448446, 0.0355816707, 0.167488784, 0.0865107551, 0.013768537, 0.401376575, 0.130470008, 0.0300768502, 0.0383248404]]}\n",
+      "{'predictions': [[0.02752956, 0.0587611571, 0.0508604646, 0.154312283, 0.0760035962, 0.0129964901, 0.458516, 0.092619285, 0.0247991625, 0.0436020344]]}\n",
+      "{'predictions': [[0.0190246552, 0.115838125, 0.03548453, 0.138723165, 0.12200997, 0.012828338, 0.387132406, 0.109228708, 0.0272692535, 0.032460954]]}\n",
+      "{'predictions': [[0.0295567568, 0.0489571691, 0.0415432379, 0.21964623, 0.107769594, 0.0110459328, 0.347042203, 0.142159656, 0.0240610894, 0.0282180831]]}\n",
+      "{'predictions': [[0.0125460578, 0.0528946444, 0.0296274871, 0.183094755, 0.134415448, 0.0141807096, 0.39737317, 0.0879673287, 0.0296478942, 0.0582524166]]}\n",
+      "{'predictions': [[0.0413516127, 0.0641062856, 0.0435722917, 0.159566402, 0.139954373, 0.0291613769, 0.276411712, 0.115447871, 0.0559384301, 0.0744897127]]}\n"
      ]
     }
    ],
@@ -367,27 +378,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO -> servingId: 17, modelName: mnist, modelVersion: 1,requestTimestamp: 1623765942, inferenceId:a4014a8e-d9c7-4fa4-9acb-78f2f8e3de43, messageType:response\n",
-      "Predictions -> [[0.0613800436, 0.0483597815, 0.073576726, 0.0258731693, 0.3094998, 0.094138369, 0.0458293408, 0.088566117, 0.107787244, 0.144989386]]\n",
+      "INFO -> servingId: 1036, modelName: mnist, modelVersion: 1,requestTimestamp: 1634307936, inferenceId:d761be39-4f35-462f-8da9-bb1359adc2bc, messageType:response\n",
+      "Predictions -> [[0.0128081683, 0.058361087, 0.0519089513, 0.0680933073, 0.101529188, 0.00917466916, 0.49870196, 0.124165297, 0.0234098844, 0.0518474728]]\n",
       "\n",
-      "INFO -> servingId: 17, modelName: mnist, modelVersion: 1,requestTimestamp: 1623765942, inferenceId:080e11c7-bf8c-4034-adf5-acc2598ea606, messageType:response\n",
-      "Predictions -> [[0.072254248, 0.0885431543, 0.0433586352, 0.0398325, 0.265434831, 0.181497604, 0.0689154416, 0.0554167852, 0.0857768059, 0.0989700779]]\n",
+      "INFO -> servingId: 1036, modelName: mnist, modelVersion: 1,requestTimestamp: 1634307937, inferenceId:dd8c8cb7-b6ec-4142-a108-a4c8058b7584, messageType:response\n",
+      "Predictions -> [[0.0169027131, 0.0688994601, 0.0502710305, 0.127270445, 0.0928574502, 0.010248892, 0.482126236, 0.0942078382, 0.0259690043, 0.0312469937]]\n",
       "\n",
-      "INFO -> servingId: 17, modelName: mnist, modelVersion: 1,requestTimestamp: 1623765942, inferenceId:0782a4ea-489f-4fad-b0a1-0b67484d4bba, messageType:response\n",
-      "Predictions -> [[0.0763806552, 0.0438941717, 0.0335087031, 0.0202852022, 0.34188053, 0.127577499, 0.103079036, 0.0814603046, 0.116382934, 0.055550985]]\n",
+      "INFO -> servingId: 1036, modelName: mnist, modelVersion: 1,requestTimestamp: 1634307937, inferenceId:3b98b0e2-4b98-4528-b162-d8a2f0dd97f1, messageType:response\n",
+      "Predictions -> [[0.0257082824, 0.040854983, 0.0316030905, 0.203676596, 0.138357729, 0.00987543911, 0.397324562, 0.064534761, 0.0407368727, 0.0473276041]]\n",
       "\n",
-      "INFO -> servingId: 17, modelName: mnist, modelVersion: 1,requestTimestamp: 1623765943, inferenceId:a32e540f-ffca-4cd9-99eb-3f6bba88260a, messageType:response\n",
-      "Predictions -> [[0.0522790626, 0.104057834, 0.0571820699, 0.0429950953, 0.254568487, 0.137584299, 0.0513742864, 0.0879343525, 0.0830356777, 0.128988877]]\n",
+      "INFO -> servingId: 1036, modelName: mnist, modelVersion: 1,requestTimestamp: 1634307937, inferenceId:cd6ac413-0062-4668-9f9d-63daa08948e2, messageType:response\n",
+      "Predictions -> [[0.0209536515, 0.075448446, 0.0355816707, 0.167488784, 0.0865107551, 0.013768537, 0.401376575, 0.130470008, 0.0300768502, 0.0383248404]]\n",
       "\n",
-      "INFO -> servingId: 17, modelName: mnist, modelVersion: 1,requestTimestamp: 1623765943, inferenceId:99698ce0-c8ef-40c6-88fd-25cd9da72050, messageType:response\n",
-      "Predictions -> [[0.0439827815, 0.0486454293, 0.0546759665, 0.0406821, 0.296878666, 0.22346729, 0.0523542352, 0.100808315, 0.0766454265, 0.0618598461]]\n",
+      "INFO -> servingId: 1036, modelName: mnist, modelVersion: 1,requestTimestamp: 1634307937, inferenceId:f113fb80-16df-471e-b149-9ade8c9cfc53, messageType:response\n",
+      "Predictions -> [[0.02752956, 0.0587611571, 0.0508604646, 0.154312283, 0.0760035962, 0.0129964901, 0.458516, 0.092619285, 0.0247991625, 0.0436020344]]\n",
       "\n"
      ]
     }
@@ -397,7 +408,7 @@
     "PRINT_PREDICTIONS=True\n",
     "\n",
     "for i in range(0, 10):\n",
-    "    msg = consumer.poll(timeout=1)\n",
+    "    msg = consumer.poll(timeout=5.0)\n",
     "    if msg is not None:\n",
     "        value = msg.value()\n",
     "        try:\n",
